--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,3 +2,10 @@
 <div>
     <a href="/movies">Voir les films</a>
 </div>
+
+<div>
+    <a href="/publishers">
+        <button>Voir les éditeurs</button>
+    </a>
+</div>
+
