--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,22 @@
-<h1>Bienvenue sur notre site</h1>
-<div>
-    <a href="/movies">Voir les films</a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Genres</title>
+</head>
+<body>
+    <h1>Welcome</h1>
+    <ul>
+        <li><a href="/genres">List Genres</a></li>
+        <li><a href="/genres/show">Genre Details</a></li>
+    </ul>
+    <ul>
+    {{#each genre}}
+        <li>
+            <a href="/genres/{{id}}/games">{{type}}</a>
+        </li>
+    {{/each}}
+    </ul>
+</body>
+</html>
