--- a/views/genres/show.hbs
+++ b/views/genres/show.hbs
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genre Details</title>
+    <title>Genres</title>
 </head>
 <body>
-    <h1>Genre Details</h1>
+    <h1>Genres</h1>
+
     <ul>
         {{#each genres}}
             <li>
-                <strong>{{this.name}}</strong>
-                <ul>
-                    {{#each this.games}}
-                        <li>{{this.title}} - {{this.description}}</li>
-                    {{/each}}
-                </ul>
+                <a href="/genres/{{id}}/games">{{name}}</a>
             </li>
         {{/each}}
     </ul>
-    <a href="/genres">Back to Genres</a>
+
+    <a href="/">Back to Home</a>
 </body>
 </html>
