new routes for genre + format Time
Now genre is in the routes folder
The format time is added to the main
Fixed some bugs with publisher

--- a/views/publishers/games.hbs
+++ b/views/publishers/games.hbs
@@ -2,7 +2,7 @@
 <ul>
   {{#each games}}
     <li>
-      <a href="/games/{{this.game.id}}">{{this.game.title}}</a> - {{this.game.releaseDate}}
+      <a href="/games/{{id}}">{{title}}</a> - {{formatTime releaseDate}}
     </li>
   {{/each}}
 </ul>
