--- a/views/genres/showgames.hbs
+++ b/views/genres/showgames.hbs
@@ -12,7 +12,7 @@
         <ul>
             {{#each games}}
                 <li>
-                    <strong>{{title}}</strong> - {{description}} (Released: {{releaseDate}})
+                    <strong>{{title}}</strong> - {{description}} (Released: {{formatTime releaseDate}})
                 </li>
             {{/each}}
         </ul>
