--- a/views/publishers/games.hbs
+++ b/views/publishers/games.hbs
@@ -2,7 +2,7 @@
 <ul>
   {{#each games}}
     <li>
-      <a href="/games/{{id}}">{{title}}</a> - {{releaseDate}}
+      <a href="/games/{{id}}">{{title}}</a> - {{formatTime releaseDate}}
     </li>
   {{/each}}
 </ul>
