--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,6 @@
     </head>
     <body>
         {{{ body }}}
-        {{> footer }} // On injecte le partial footer
+        {{> footer }} 
     </body>
 </html>
