--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,10 @@
 <h1>Bienvenue sur notre site</h1>
 <div>
-    <a href="/movies">Voir les films</a>
-</div>
-
-<div>
     <a href="/publishers">
         <button>Voir les éditeurs</button>
+    </a>
+    <a href="/games">
+        <button>Voir les jeux</button>
     </a>
 </div>
 
