compatibility with games
Modify some files so everything is working

--- a/views/games/index.hbs
+++ b/views/games/index.hbs
@@ -3,7 +3,7 @@
 <ul>
   {{#each games}}
     <li>
-      <a href="/games/{{this.id}}details/"><h2>{{this.title}}</h2></a>
+      <a href="/games/{{this.id}}/details/"><h2>{{this.title}}</h2></a>
     </li>
   {{/each}}
 </ul>
