--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>Welcome</h1>
     <ul>
-        <li><a href="/genres">List Genres</a></li>
+        <li><a href="/games">List games</a></li>
         <li><a href="/genres">List Genres</a></li>
         <li><a href="/genres/show">Genre Details</a></li>
         <li><a href="/publishers"> Voir les éditeurs</a></li>
