All games are now tied to their pages
Now when we click on a game in the genre or the publisher page we can access the related game's page

--- a/views/genres/showgames.hbs
+++ b/views/genres/showgames.hbs
@@ -12,7 +12,7 @@
         <ul>
             {{#each games}}
                 <li>
-                    <strong>{{title}}</strong> - {{description}} (Released: {{formatTime releaseDate}})
+                    <a href="/games/{{id}}/details"><strong>{{title}}</strong></a> - {{description}} (Released: {{formatTime releaseDate}})
                 </li>
             {{/each}}
         </ul>
