Genre : show is deleted
the show.hbs file has no use so i deleted (taking the list of genre directly in index).

also now when we apply a modification to a game it redirect us to the game page

--- a/views/games/edit.hbs
+++ b/views/games/edit.hbs
@@ -30,5 +30,5 @@
   </select>
 
   <button type="submit">Enregistrer les modifications</button>
-  <a href="/games/{{game.id}}">Annuler</a>
+  <a href="/games/{{game.id}}/details">Annuler</a>
 </form>
