CSS for list publishers

--- a/views/publishers/games.hbs
+++ b/views/publishers/games.hbs
@@ -1,3 +1,6 @@
+<head>
+  <link rel="stylesheet" href="/css/styleListGames.css">
+</head>
 <h1>Jeux de l'éditeur : {{publisher}}</h1>
 <ul>
   {{#each games}}
