--- a/views/features/change.hbs
+++ b/views/features/change.hbs
@@ -13,7 +13,7 @@
             <input type="checkbox" name="gameIds[]" value="{{id}}" id="game-{{id}}" 
                    {{#if isFeatured}}disabled{{/if}} >
             <label for="game-{{id}}">
-              {{title}} - {{releaseDate}} 
+              {{title}}
               {{#if isFeatured}}(Already Featured){{/if}}
             </label>
           </li>
