First Version CSS
Put CSS on all the pages

--- a/views/games/edit.hbs
+++ b/views/games/edit.hbs
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="/css/editGames.css">
+</head>
+
 <h1>Modifier le jeu : {{game.title}}</h1>
 
 <form action="/games/{{game.id}}/edit" method="POST">
