--- a/views/publishers/games.hbs
+++ b/views/publishers/games.hbs
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="/css/styleListGames.css">
+  <link rel="stylesheet" href="/css/publishersGames.css">
 </head>
 <h1>Jeux de l'éditeur : {{publisher}}</h1>
 <ul>
