--- a/views/games/index.hbs
+++ b/views/games/index.hbs
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="/css/indexGames.css">
+</head>
+
 <h1>Liste des jeux vidéo</h1>
  <a href="/games/new">Ajouter des jeux</a>
 <ul>
