--- a/views/games/new.hbs
+++ b/views/games/new.hbs
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="/css/newGames.css">
+</head>
+
 <form action="/games/new" method="POST">
   <label for="title">Titre du jeu:</label>
   <input type="text" id="title" name="title" required />
