--- a/views/genres/showgames.hbs
+++ b/views/genres/showgames.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games in {{genre}}</title>
+    <link rel="stylesheet" href="/css/genreGames.css">
 </head>
 <body>
     <h1>Games in Genre: {{genre}}</h1>
