--- a/views/publishers/list.hbs
+++ b/views/publishers/list.hbs
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/publishersList.css">
 </head>
 
 <h1>Liste des éditeurs</h1>
