Put CSS on editPublishers

--- a/views/publishers/edit.hbs
+++ b/views/publishers/edit.hbs
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/publishersGames.css">
 </head>
 
 <h1>Edit Publisher</h1>
