--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,4 +14,4 @@
     <p>No featured games yet!</p>
   {{/if}}
 </ul>
-<a href="features/">pour aller vers le sfeatured</a>
+<a href="features/">Manage featured games</a>
