--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="/css/footer.css">
+</head>
+
 <footer>
   <p>&copy; 2024 - Tous droits réservés</p>
 </footer>
