--- a/public/css/indexGames.css
+++ b/public/css/indexGames.css
@@ -43,4 +43,12 @@ h1 {
   button:hover {
     background-color: #e0281b;
   }
+
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #121212;
+    color: #e0e0e0;
+    margin: 0;
+    padding: 0;
+  }
   
