--- a/public/css/newGames.css
+++ b/public/css/newGames.css
@@ -51,3 +51,10 @@ form {
     background-color: #009ec2;
   }
   
+  body {
+    background-color: #121212;
+    color: white;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
